--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,21 +5,21 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:id="@+id/nav_select_station"
+            android:icon="@drawable/ic_bus"
+            android:title="@string/select_station" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:id="@+id/nav_offline_bus_data"
+            android:icon="@drawable/ic_offline_data"
+            android:title="@string/offline_bus_program" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:id="@+id/nav_change_statusAndBus"
+            android:icon="@drawable/ic_status_and_bus"
+            android:title="@string/change_status_and_or_bus" />
         <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:id="@+id/nav_setup_route"
+            android:icon="@drawable/ic_setup_route"
+            android:title="@string/set_up_route" />
     </group>
 
     <item android:title="Communicate">
