--- a/app/src/main/res/drawable-mdpi/popup_style_set.xml
+++ b/app/src/main/res/drawable-mdpi/popup_style_set.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/darkgray" />
-    <corners android:radius="44dp" />
+    <solid android:color="@color/darkerdarkgray" />
+    <corners android:radius="12dp" />
 </shape>
