--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -145,4 +145,5 @@
     <color name="black">#000000</color>
     <color name="lighterdarkgray">#333333</color>
     <color name="darkerdarkgray">#212121</color>
+    <color name="darkergray">#444444</color>
 </resources>
