Station class updated. Stations saved in file. New UI elements. Small fixes. Selecting station updates.

--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -32,6 +32,7 @@
         app:borderWidth="0dp"
         android:backgroundTintMode="multiply"
         android:backgroundTint="@color/black"
-        android:outlineProvider="none"/>
+        android:outlineProvider="none"
+        tools:targetApi="lollipop" />
 
 </android.support.design.widget.CoordinatorLayout>
