--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="184dp"
     android:background="@color/darkerdarkgray"
@@ -28,6 +27,7 @@
         android:text="@string/current_status"
         android:textColor="@color/white"
         android:textSize="16sp"
+        android:fontFamily="@font/modernsans"
         />
 
     <TextView
@@ -37,6 +37,7 @@
         android:text="@string/closest_station"
         android:textColor="@color/white"
         android:textSize="12sp"
+        android:fontFamily="@font/modernsans"
         android:layout_marginTop="8dp"
         />
 
@@ -46,6 +47,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/white"
         android:textSize="12sp"
+        android:fontFamily="@font/modernsans"
         android:text="@string/user_id"/>
 
     <TextView
@@ -54,27 +56,7 @@
         android:textColor="@color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fontFamily="@font/modernsans"
         android:text="@string/current_speed"/>
-
-    <!--<ImageView-->
-        <!--android:id="@+id/imageView"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:contentDescription="@string/nav_header_desc"-->
-        <!--android:paddingTop="@dimen/nav_header_vertical_spacing"-->
-        <!--app:srcCompat="@mipmap/ic_launcher_round" />-->
-
-    <!--<TextView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:paddingTop="@dimen/nav_header_vertical_spacing"-->
-        <!--android:text="@string/nav_header_title"-->
-        <!--android:textAppearance="@style/TextAppearance.AppCompat.Body1" />-->
-
-    <!--<TextView-->
-        <!--android:id="@+id/textView"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="@string/nav_header_subtitle" />-->
 
 </LinearLayout>
