Mayor fixes. UI updates (Navigation drawer background changed from single color to gradient). Optimized imports and code. Cleaned project files.

--- a/app/src/main/res/layout/result_buses_row_item.xml
+++ b/app/src/main/res/layout/result_buses_row_item.xml
@@ -45,7 +45,7 @@
         android:textSize="16sp"
         app:layout_constraintLeft_toRightOf="@id/textView_result_bus_number"
         app:layout_constraintTop_toBottomOf="@id/textView_result_bus_info"
-        tools:ignore="HardcodedText"
+        tools:ignore="HardcodedText,RtlSymmetry"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
 
