--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_bus"
+        app:srcCompat="@drawable/ic_bus"
         app:borderWidth="0dp"
         android:backgroundTintMode="multiply"
         android:backgroundTint="@color/black"
