--- a/app/src/main/res/drawable-mdpi/popup_style_set.xml
+++ b/app/src/main/res/drawable-mdpi/popup_style_set.xml
@@ -2,4 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/darkerdarkgray" />
     <corners android:radius="12dp" />
+    <padding
+        android:bottom="12dp"
+        android:left="8dp"
+        android:right="8dp"
+        android:top="12dp" />
 </shape>
