Update 6. Removed unnecessary variables. Saving stations and loading them from SharedPreferences now works. Deleted unnecessary Station class. Icon added for real-time buses. Code simplified. Gradle import updated (firestore).

--- a/app/src/main/res/layout/result_buses.xml
+++ b/app/src/main/res/layout/result_buses.xml
@@ -7,6 +7,8 @@
     android:layout_alignParentTop="true"
     android:layout_marginTop="28dp"
     android:layout_marginBottom="16dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
     android:background="@drawable/popup_style_set"
     android:padding="4dp"
     tools:ignore="UselessParent">
