--- a/app/src/main/res/layout/draw_route_options.xml
+++ b/app/src/main/res/layout/draw_route_options.xml
@@ -13,20 +13,46 @@
         tools:ignore="UselessParent">
 
         <TextView
-            android:id="@+id/editText_drawRoute_select_your_bus"
+            android:id="@+id/textView_drawRoute_select_your_bus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/modernsans"
             android:text="@string/select_the_station_where_you_want_to_go"
             android:textColor="@color/white"
+            android:textSize="16sp" />
+
+        <AutoCompleteTextView
+            android:id="@+id/autoCompleteTextView_search_station"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/textView_drawRoute_select_your_bus"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="12dp"
+            android:background="@color/darkergray"
             android:fontFamily="@font/modernsans"
+            android:hint="@string/enter_the_station_name_here"
+            android:inputType="text"
+            android:padding="8dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/textView_or_select"
+            android:layout_width="wrap_content"
+            android:layout_below="@id/autoCompleteTextView_search_station"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/modernsans"
+            android:text="@string/or_select_your_station_from_this_list"
+            android:layout_centerHorizontal="true"
+            android:textColor="@color/white"
             android:textSize="16sp" />
 
         <Spinner
             android:id="@+id/spinner_drawRoute_selectStation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/editText_drawRoute_select_your_bus"
-            android:layout_marginTop="8dp"
+            android:layout_below="@id/textView_or_select"
             android:layout_marginBottom="16dp"
             android:backgroundTint="@color/white"
             android:popupBackground="@color/white"
@@ -39,12 +65,9 @@
             android:layout_below="@+id/spinner_drawRoute_selectStation"
             android:layout_centerHorizontal="true"
             android:background="@color/darkergray"
-            android:text="@string/apply"
-            android:textSize="12sp"
             android:fontFamily="@font/modernsans"
-            android:textColor="@color/white" />
-
-
+            android:text="@string/apply"
+            android:textColor="@color/white"
+            android:textSize="12sp" />
     </RelativeLayout>
-
 </RelativeLayout>
