--- a/app/src/main/res/layout/result_buses_row_clicked.xml
+++ b/app/src/main/res/layout/result_buses_row_clicked.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/modernsans"
         android:text="@string/info_for_bus"
+        android:textSize="36sp"
         android:textColor="@color/white"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,6 +23,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/modernsans"
         android:text="@string/arrives_in"
+        android:textSize="32sp"
         android:textColor="@color/white"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView_result_buses_clicked_info_for_bus" />
@@ -32,6 +34,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/modernsans"
         android:text="@string/get_to_this_station"
+        android:textSize="32sp"
         android:textColor="@color/white"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView_result_buses_clicked_arrives_in" />
