--- a/app/src/main/res/layout/result_buses_row_item.xml
+++ b/app/src/main/res/layout/result_buses_row_item.xml
@@ -4,33 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:minWidth="400dp"
     android:background="@color/darkerdarkgray"
+    android:minWidth="400dp"
     android:padding="12dp">
 
     <TextView
         android:id="@+id/textView_result_bus_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/modernsans"
         android:text="27"
         android:textColor="@color/white"
         android:textSize="64sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:fontFamily="@font/modernsans"
-        tools:ignore="HardcodedText"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/textView_result_bus_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Realtime bus not found!"
         android:fontFamily="@font/modernsans"
-        app:layout_constraintBottom_toTopOf="@id/textView_result_bus_comesIn"
         android:paddingStart="16dp"
+        android:text="Realtime bus not found!"
         android:textColor="@color/white"
         android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@id/textView_result_bus_comesIn"
         app:layout_constraintLeft_toRightOf="@id/textView_result_bus_number"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="HardcodedText,RtlSymmetry" />
@@ -39,16 +39,22 @@
         android:id="@+id/textView_result_bus_comesIn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:lines="2"
-        android:text="Comes in 10 minutes."
+        android:layout_marginEnd="12dp"
+        android:gravity="left"
+        android:ellipsize="end"
         android:fontFamily="@font/modernsans"
-        android:textColor="@color/white"
+        android:lines="3"
+        android:maxLines="3"
         android:paddingStart="20dp"
-        android:textSize="16sp"
+        android:scrollHorizontally="false"
+        android:singleLine="false"
+        android:text="Comes in 10 minutes."
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/textView_result_bus_number"
         app:layout_constraintTop_toBottomOf="@id/textView_result_bus_info"
-        tools:ignore="HardcodedText,RtlSymmetry"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        tools:ignore="HardcodedText,RtlSymmetry" />
 
 
 </android.support.constraint.ConstraintLayout>
