--- a/app/src/main/res/layout/result_buses_row_item.xml
+++ b/app/src/main/res/layout/result_buses_row_item.xml
@@ -40,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="12dp"
-        android:gravity="left"
+        android:gravity="start"
         android:ellipsize="end"
         android:fontFamily="@font/modernsans"
         android:lines="3"
