--- a/app/src/main/res/layout/fragment_listed_bus_details.xml
+++ b/app/src/main/res/layout/fragment_listed_bus_details.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:mapbox="http://schemas.android.com/tools"
+    android:id="@+id/fragment_listedBusContainer"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/popup_style_set"
@@ -14,7 +19,8 @@
         android:text="@string/info_for_bus"
         android:textColor="@color/white"
         android:textSize="36sp"
-        />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView_result_buses_clicked_arrives_in"
@@ -24,81 +30,30 @@
         android:text="@string/arrives_in"
         android:textColor="@color/white"
         android:textSize="28sp"
-        android:layout_below="@id/textView_result_buses_clicked_info_for_bus" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView_result_buses_clicked_info_for_bus" />
 
     <TextView
         android:id="@+id/textView_result_buses_clicked_closest_station_arrive"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/modernsans"
-        android:text="@string/get_to_this_station"
+        android:text="@string/closest_station_to_you"
         android:textColor="@color/white"
         android:textSize="28sp"
-        android:layout_below="@id/textView_result_buses_clicked_arrives_in" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView_result_buses_clicked_arrives_in" />
 
     <com.mapbox.mapboxsdk.maps.MapView
         android:id="@+id/mapView2"
         android:layout_width="240dp"
         android:layout_height="240dp"
         android:layout_margin="12dp"
-        android:layout_below="@id/textView_result_buses_clicked_closest_station_arrive" />
+        app:layout_constraintTop_toBottomOf="@id/textView_result_buses_clicked_closest_station_arrive"
+        mapbox:layout_constraintBottom_toBottomOf="parent"
+        mapbox:layout_constraintEnd_toEndOf="parent"
+        mapbox:layout_constraintStart_toStartOf="parent" />
 
-</RelativeLayout>
-
-<!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
-<!--xmlns:mapbox="http://schemas.android.com/tools"-->
-<!--android:id="@+id/fragment_listedBusContainer"-->
-<!--android:layout_width="wrap_content"-->
-<!--android:layout_height="wrap_content"-->
-<!--android:background="@drawable/popup_style_set"-->
-<!--android:padding="12dp"-->
-<!--android:tag="ListedBusDetailsFragment">-->
-
-<!--<TextView-->
-    <!--android:id="@+id/textView_result_buses_clicked_info_for_bus"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:fontFamily="@font/modernsans"-->
-    <!--android:text="@string/info_for_bus"-->
-    <!--android:textColor="@color/white"-->
-    <!--android:textSize="36sp"-->
-    <!--app:layout_constraintLeft_toLeftOf="parent"-->
-    <!--app:layout_constraintTop_toTopOf="parent" />-->
-
-<!--<TextView-->
-    <!--android:id="@+id/textView_result_buses_clicked_arrives_in"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:fontFamily="@font/modernsans"-->
-    <!--android:text="@string/arrives_in"-->
-    <!--android:textColor="@color/white"-->
-    <!--android:textSize="28sp"-->
-    <!--app:layout_constraintLeft_toLeftOf="parent"-->
-    <!--app:layout_constraintTop_toBottomOf="@id/textView_result_buses_clicked_info_for_bus" />-->
-
-<!--<TextView-->
-    <!--android:id="@+id/textView_result_buses_clicked_closest_station_arrive"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:fontFamily="@font/modernsans"-->
-    <!--android:text="@string/get_to_this_station"-->
-    <!--android:textColor="@color/white"-->
-    <!--android:textSize="28sp"-->
-    <!--app:layout_constraintLeft_toLeftOf="parent"-->
-    <!--app:layout_constraintTop_toBottomOf="@id/textView_result_buses_clicked_arrives_in" />-->
-
-<!--<com.mapbox.mapboxsdk.maps.MapView-->
-    <!--android:id="@+id/mapView2"-->
-    <!--android:layout_width="240dp"-->
-    <!--android:layout_height="240dp"-->
-    <!--android:layout_margin="12dp"-->
-    <!--app:layout_constraintTop_toBottomOf="@id/textView_result_buses_clicked_closest_station_arrive"-->
-    <!--mapbox:layout_constraintBottom_toBottomOf="parent"-->
-    <!--mapbox:layout_constraintEnd_toEndOf="parent"-->
-    <!--mapbox:layout_constraintStart_toStartOf="parent"-->
-    <!--mapbox:mapbox_cameraZoom="12" />-->
-
-<!--</android.support.constraint.ConstraintLayout>-->
+</android.support.constraint.ConstraintLayout>
 
 
